<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashBoard"
    android:background="@color/ColorBackground">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/LL_Plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Plant_header"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/Title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Height"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"
            android:paddingTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtPlantHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Width"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"
            android:paddingTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtPlantwidth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Area"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"
            android:paddingTop="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtPlantArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_Ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/LL_Plant"
        android:layout_alignStart="@id/LL_Plant"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Reference_header"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/Title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Height"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"
            android:paddingTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtRefHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Width"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtRefWidht"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PR_Area"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/SubTitle"
            android:layout_marginStart="@dimen/TitleToSub_Left_Margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtRefArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/ColorText"
                android:textSize="@dimen/Values"
                android:layout_marginStart="@dimen/Value_Left_Margin"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit_cm"
                android:textColor="@color/ColorText"
                android:layout_marginStart="@dimen/Unit_Left_Margin"
                android:textSize="@dimen/Units"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="209dp"
        android:layout_alignTop="@id/LL_Plant"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:scaleType="centerCrop"
        android:layout_toEndOf="@id/LL_Plant"

        android:contentDescription="@string/Image_Content" />
    <LinearLayout
        android:id="@+id/LL_ProgOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/imageView"
        android:layout_alignTop="@id/LL_Ref"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Humidity"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/ColorText"
            android:textSize="@dimen/Title" />
<RelativeLayout
    android:layout_width="90dp"
    android:layout_height="90dp">
    <TextView
        android:id="@+id/txtHumGauge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/ColorText"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/Gauge_Val_Size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Unit_GM2"
        android:textColor="@color/ColorText"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/Gauge_Unit_Size"/>
        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/HumGauge"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:gaugeDividerDrawFirst="false"
            app:gaugeDividerDrawLast="true"
            app:gaugeDividerSize="1"
            app:gaugeDividerStep="100"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="#05D510"
            app:gaugePointStartColor="#024E06"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="270" />
</RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Temperature"
            android:textColor="@color/ColorText"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/Title"/>
<RelativeLayout
    android:layout_width="90dp"
    android:layout_height="90dp">
    <TextView
        android:id="@+id/txtTemGauge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/ColorText"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/Gauge_Val_Size"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Unit_C"
        android:textColor="@color/ColorText"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:textSize="@dimen/Gauge_Unit_Size"/>

        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/TemGauge"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:gaugeDividerDrawFirst="false"
            app:gaugeDividerDrawLast="true"
            app:gaugeDividerSize="1"
            app:gaugeDividerStep="100"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="#F00606"
            app:gaugePointStartColor="#770404"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="270"/>
</RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/LL_ProgOne"
        android:layout_alignTop="@id/LL_ProgOne"
        android:orientation="vertical"
        android:layout_marginStart="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Moisture"
            android:textColor="@color/ColorText"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/Title"/>
        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="90dp">
        <TextView
            android:id="@+id/txtMoisGauge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/ColorText"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/Gauge_Val_Size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unit_MC"
            android:textColor="@color/ColorText"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textSize="@dimen/Gauge_Unit_Size"/>
        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/MoisGauge"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:gaugeDividerDrawFirst="false"
            app:gaugeDividerDrawLast="true"
            app:gaugeDividerSize="1"
            app:gaugeDividerStep="100"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="#0627F1"
            app:gaugePointStartColor="#041479"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="270" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DashBoard_Light"
            android:textColor="@color/ColorText"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/Title"/>
        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="90dp">
        <TextView
            android:id="@+id/txtLightGauge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/ColorText"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/Gauge_Val_Size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Unit_Lux"
            android:textColor="@color/ColorText"
            android:gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:textSize="@dimen/Gauge_Unit_Size"/>
        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/LightGauge"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:gaugeDividerDrawFirst="false"
            app:gaugeDividerDrawLast="true"
            app:gaugeDividerSize="1"
            app:gaugeDividerStep="100"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="#F0A903"
            app:gaugePointStartColor="#8B6405"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeWidth="10dp"
            app:gaugeSweepAngle="270" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>